estilizando textos e tabelas

--- a/curso-html5/style.css
+++ b/curso-html5/style.css
@@ -1,19 +1,58 @@
 body{
-	background-color: #CCC;
+	background-color: #f7f7f7;
+	font-family: verdana, arial, sans-serif;
+}
+
+.photo{
+	border-radius: 50%;
+	border: 1px solid #505050;
 }
 
 #title, .sub_title, .post_title{
-	color: blue;
+	color: #505050;
+}
+
+#title{
+	font-size: 40px;
+	text-transform: uppercase;
+}
+
+a{
+	text-decoration: line-through;
+	color: #505050;
 }
 
 .post_title{
 	font-size: 16px;
 	font-style: italic;
+	margin: 0;
+	margin-bottom: 15px;
 }
 
 .post{
 	background-color: white;
-	padding: 10px;
-	border: 3px solid black;
-	margin: 10px;
+	padding: 15px;
+	border: 3px solid #505050;
+	margin-bottom: 15px;
+	border-radius: 10px;
+}
+
+.post_content{
+	margin: 0;
+	margin-bottom: 15px;
+	text-transform: capitalize;
+}
+
+.post_image{
+	margin-bottom: 15px;
+}
+
+.lista_contato{
+	list-style-type: none;
+	padding: 0;
+	padding-left: 15px;
+}
+
+.lista_contato li a{
+	text-decoration: none;
 }
